--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
-<html>
-    <h1>Hello, world!</h1>
+<!doctype html>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <link rel="icon" type="image/png" href="favicon.png" />
+        <title>DPER</title>
+    </head>
+    <body>
+        <h1>Digital Public Educational Resource</h1>
+        <p>Coming Soon!</p>
+    </body>
 </html>
